Bug 368074 - The height of the panel is not restored correctly.
Summary: The height of the panel is not restored correctly.
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Global Theme packages (other bugs)
Version First Reported In: master
Platform: Neon Linux
: NOR major
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-08-31 20:07 UTC by Lucas
Modified: 2016-10-11 14:45 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Lucas 2016-08-31 20:07:14 UTC
The height of the panel is not restored correctly. 


Reproducible: Always

Steps to Reproduce:
1. Create a new lf package (plasma look and feel explorer)
2. Add a second panel at the top of the screen and change the height of the bottom panel 
3. Save the changes using option (layout from current plasma setup)
4. In system settings switch to a new lf package

Actual Results:  
Height of the bottom applet is not restored correctly

Expected Results:  
Height of the bottom applet is restored correctly

Video
https://youtu.be/hZYQ7QmTld0
Comment 1 Marco Martin 2016-10-11 14:45:54 UTC
Git commit aea33cddb547cc2ba98be5dd45dc7562b32b4b9a by Marco Martin.
Committed on 11/10/2016 at 14:45.
Pushed by mart into branch 'Plasma/5.8'.

restore all panel properties

Summary:
restore the missing panel properties:
alignment
minimum length
maximum length
offset

also, allow non integer values for the measures (height, min/max, offset)
Related: bug 367918

Test Plan:
dumped a config with a custom panel, different height/alignment/offset etc
started a new plasma session with that l&f package, restored panel correctly

Reviewers: #plasma, davidedmundson

Reviewed By: #plasma, davidedmundson

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D3021

M  +5    -1    shell/scripting/scriptengine_v1.cpp
M  +14   -7    shell/shellcorona.cpp

http://commits.kde.org/plasma-workspace/aea33cddb547cc2ba98be5dd45dc7562b32b4b9a