restore all panel properties

Summary:
restore the missing panel properties:
alignment
minimum length
maximum length
offset

also, allow non integer values for the measures (height, min/max, offset)
BUG:368074
BUG:367918

Test Plan:
dumped a config with a custom panel, different height/alignment/offset etc
started a new plasma session with that l&f package, restored panel correctly

Reviewers: #plasma, davidedmundson

Reviewed By: #plasma, davidedmundson

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D3021